# internal/handler/post_handler.go
@@ -9,20 +9,22 @@ import (
 	"gorm.io/gorm"
 )
 
+// PostHandler é o handler para as operações de post (injeção de dependência)
 type PostHandler struct {
 	DB *gorm.DB // banco de dados para realizar as operações no banco de dados (injeção de dependência) (é uma instância do banco de dados)
 }
 
 // CreatePost godoc
-// @Summary      Criar uma nova postagem
-// @Description  Cria uma postagem de produto para um vendedor específico
-// @Tags         posts
-// @Accept       json
-// @Produce      json
-// @Param        post  body      domain.RequestPostCreate  true  "Dados da postagem"
-// @Success      200   {object}  domain.Post
-// @Failure      400   {object}  map[string]string "Erro de validação"
-// @Router       /products/publish [post]
+//
+//	@Summary		Criar uma nova postagem
+//	@Description	Cria uma postagem de produto para um vendedor específico
+//	@Tags			Posts
+//	@Accept			json
+//	@Produce		json
+//	@Param			post	body		domain.RequestPostCreate	true	"Dados da postagem"
+//	@Success		200		{object}	domain.Post
+//	@Failure		400		{object}	map[string]string	"Erro de validação"
+//	@Router			/products/publish [post]
 func (h *PostHandler) CreatePost(c *gin.Context) {
 
 	var req domain.RequestPostCreate
