# internal/handler/user_handler.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"errors"
 	"net/http"
 	"strconv"
 
@@ -19,15 +20,16 @@ type UserHandler struct {
 // CRIA UM NOVO USUÁRIO
 
 // CreateUser godoc
-// @Summary      Criar um novo usuário
-// @Tags         users
-// @Accept       json
-// @Produce      json
-// @Param        user  body      domain.RequestUserCreate  true  "Dados do usuário"
-// @Success      201   {object}  domain.User
-// @Failure      400   {object}  map[string]string "Dados inválidos ou JSON malformado"
-// @Failure      500   {object}  map[string]string "Erro interno ao salvar no banco"
-// @Router       /users [post]
+//
+//	@Summary	Criar um novo usuário
+//	@Tags		Users
+//	@Accept		json
+//	@Produce	json
+//	@Param		user	body		domain.RequestUserCreate	true	"Dados do usuário"
+//	@Success	201		{object}	domain.User
+//	@Failure	400		{object}	map[string]string	"Dados inválidos ou JSON malformado"
+//	@Failure	500		{object}	map[string]string	"Erro interno ao salvar no banco"
+//	@Router		/users [post]
 func (h *UserHandler) CreateUser(c *gin.Context) {
 
 	var createUser domain.RequestUserCreate // cria uma nova instância de RequestUserCreate
@@ -55,27 +57,32 @@ func (h *UserHandler) CreateUser(c *gin.Context) {
 // BUSCA UM USUÁRIO PELO ID
 
 // GetUser godoc
-// @Summary      Buscar usuário por ID
-// @Tags         users
-// @Produce      json
-// @Param        userId  path      int  true  "ID do Usuário"
-// @Success      200     {object}  domain.User
-// @Failure      400     {object}  map[string]string "ID inválido (não é um número)"
-// @Failure      404     {object}  map[string]string "Usuário não encontrado no banco"
-// @Router       /users/{userId} [get]
+//
+//	@Summary	Buscar usuário por ID
+//	@Tags		Users
+//	@Produce	json
+//	@Param		userId	path		int	true	"ID do Usuário"
+//	@Success	200		{object}	domain.User
+//	@Failure	400		{object}	map[string]string	"ID inválido (não é um número)"
+//	@Failure	404		{object}	map[string]string	"Usuário não encontrado no banco"
+//	@Router		/users/{userId} [get]
 func (h *UserHandler) GetUser(c *gin.Context) {
 	// pega o ID do usuário da URL (path parameter) e converte para string e armazena na variável userIdStr
 	userIdStr := c.Param("userId")
-	userId, err := strconv.Atoi(userIdStr)
-	// converte o ID do usuário para string
+	userId, err := strconv.Atoi(userIdStr) // converte o ID do usuário para string e armazena na variável userId
+	// verifica se o ID do usuário é válido
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "ID do usuário inválido."})
 		return
 	}
-	// busca o usuário no banco de dados
-	var user domain.User
-	if err := h.DB.First(&user, userId).Error; err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "Usuário não encontrado."})
+
+	user, err := h.UserService.GetUserByIdService(userId)
+	if err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "Usuário não encontrado."})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Erro ao buscar usuário."})
 		return
 	}
 
@@ -85,18 +92,18 @@ func (h *UserHandler) GetUser(c *gin.Context) {
 // RETORNA TODOS OS USUÁRIOS
 
 // GetUsers godoc
-// @Summary      Listar todos os usuários
-// @Description  Retorna uma lista contendo todos os usuários cadastrados no sistema
-// @Tags         users
-// @Produce      json
-// @Success      200  {array}   domain.UserListResponse        "Lista de usuários retornada com sucesso"
-// @Failure      500  {object}  map[string]string  "Erro interno ao buscar usuários no banco"
-// @Router       /users [get]
+//
+//	@Summary		Listar todos os usuários
+//	@Description	Retorna uma lista contendo todos os usuários cadastrados no sistema
+//	@Tags			Users
+//	@Produce		json
+//	@Success		200	{array}		domain.UserListResponse	"Lista de usuários retornada com sucesso"
+//	@Failure		500	{object}	map[string]string		"Erro interno ao buscar usuários no banco"
+//	@Router			/users [get]
 func (h *UserHandler) GetUsers(c *gin.Context) {
 
-	var users []domain.UserListResponse
-
-	if err := h.UserService.ListUsersService(&users); err != nil {
+	users, err := h.UserService.ListUsersService()
+	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Erro ao buscar usuários."})
 		return
 	}
@@ -106,17 +113,18 @@ func (h *UserHandler) GetUsers(c *gin.Context) {
 // ATUALIZA UM USUÁRIO PELO ID
 
 // UpdateUser godoc
-// @Summary      Atualizar um usuário
-// @Description  Atualiza os dados (nome e email) de um usuário existente pelo seu ID
-// @Tags         users
-// @Accept       json
-// @Produce      json
-// @Param        userId  path      int                        true  "ID do usuário a ser atualizado"
-// @Param        user    body      domain.RequestUserUpdate   true  "Novos dados do usuário"
-// @Success      200     {object}  domain.User                "Usuário atualizado com sucesso"
-// @Failure      400     {object}  map[string]string          "ID inválido ou JSON malformado"
-// @Failure      404     {object}  map[string]string          "Usuário não encontrado"
-// @Router       /users/{userId} [put]
+//
+//	@Summary		Atualizar um usuário
+//	@Description	Atualiza os dados (nome e email) de um usuário existente pelo seu ID
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			userId	path		int							true	"ID do usuário a ser atualizado"
+//	@Param			user	body		domain.RequestUserUpdate	true	"Novos dados do usuário"
+//	@Success		200		{object}	domain.User					"Usuário atualizado com sucesso"
+//	@Failure		400		{object}	map[string]string			"ID inválido ou JSON malformado"
+//	@Failure		404		{object}	map[string]string			"Usuário não encontrado"
+//	@Router			/users/{userId} [put]
 func (h *UserHandler) UpdateUser(c *gin.Context) {
 
 	userIdStr := c.Param("userId")
@@ -151,14 +159,15 @@ func (h *UserHandler) UpdateUser(c *gin.Context) {
 // DELETA UM USUÁRIO PELO ID
 
 // DeleteUser godoc
-// @Summary      Deletar um usuário
-// @Tags         users
-// @Produce      json
-// @Param        userId  path      int  true  "ID do Usuário"
-// @Success      200     {object}  map[string]string "Mensagem de sucesso"
-// @Failure      400     {object}  map[string]string "ID inválido"
-// @Failure      404     {object}  map[string]string "Usuário não existe para ser deletado"
-// @Router       /users/{userId} [delete]
+//
+//	@Summary	Deletar um usuário
+//	@Tags		Users
+//	@Produce	json
+//	@Param		userId	path		int					true	"ID do Usuário"
+//	@Success	200		{object}	map[string]string	"Mensagem de sucesso"
+//	@Failure	400		{object}	map[string]string	"ID inválido"
+//	@Failure	404		{object}	map[string]string	"Usuário não existe para ser deletado"
+//	@Router		/users/{userId} [delete]
 func (h *UserHandler) DeleteUser(c *gin.Context) {
 	userIdStr := c.Param("userId")
 	userId, err := strconv.Atoi(userIdStr)
@@ -177,86 +186,15 @@ func (h *UserHandler) DeleteUser(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "Usuário deletado com sucesso."})
 }
 
-// US 0001: Poder "seguir" um vendedor específico
-
-// FollowUser godoc
-// @Summary      Seguir um vendedor
-// @Description  Permite que um usuário siga um vendedor específico
-// @Tags         users
-// @Accept       json
-// @Produce      json
-// @Param        userId       path      int  true  "ID do usuário que vai seguir"
-// @Param        userIdToFollow  path      int  true  "ID do vendedor a ser seguido"
-// @Success      200          {string}  string "Usuário seguido com sucesso"
-// @Failure      400          {object}  map[string]string "Erro na requisição"
-// @Router       /users/{userId}/follow/{userIdToFollow} [post]
-func (h *UserHandler) FollowUser(c *gin.Context) {
-
-	userIdStr := c.Param("userId")
-	sellerIdStr := c.Param("sellerId")
-	// converte o ID do usuário para string
-	userId, err := strconv.Atoi(userIdStr)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "ID do usuário inválido."})
-		return
-	}
-	sellerId, err := strconv.Atoi(sellerIdStr)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "ID é do vendedor inválido."})
-		return
-	}
-	// verifica se o usuário está tentando seguir ele mesmo
-	if userId == sellerId {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Você não pode seguir você mesmo."})
-		return
-	}
-	// verifica se o vendedor existe
-	var existingSeller domain.User
-	if err := h.DB.First(&existingSeller, sellerId).Error; err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "Vendedor não encontrado."})
-		return
-	}
-	if existingSeller.Role != "seller" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "O ID informado não pertence a um vendedor."})
-		return
-	}
-	// verifica se o usuário existe
-	var existingUser domain.User
-	if err := h.DB.First(&existingUser, userId).Error; err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "Usuário não encontrado."})
-		return
-	}
-	// verifica se o usuário já está seguindo o vendedor
-	var existingFollow domain.UserFollow
-	if err := h.DB.Where("follower_id = ? AND seller_id = ?", userId, sellerId).First(&existingFollow).Error; err == nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Você já segue este vendedor."})
-		return
-	}
-	// cria a instância de UserFollow com os dados do follow
-	follow := domain.UserFollow{
-		FollowerID: userId,
-		SellerID:   sellerId,
-	}
-
-	// cria o follow no banco de dados
-	if err := h.DB.Create(&follow).Error; err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Erro ao criar follow: "})
-		return
-	}
-
-	// retorna a mensagem de sucesso e os dados do follow
-	c.JSON(http.StatusOK, gin.H{"message": "Usuário seguindo vendedor com sucesso!.",
-		"data": follow})
-}
-
 // US 0002: Obter o número de seguidores de um vendedor
+
 // GetUsersFollowersCountBySeller godoc
-// @Summary      Obter contagem de seguidores
-// @Description  Retorna a quantidade total de seguidores de um usuário, DESDE QUE ele seja um vendedor (role='seller')
-// @Tags         users
-// @Param        userId  path  int  true  "ID do vendedor"
-// @Failure      400     {object}  map[string]string "ID inválido ou usuário não é vendedor"
-// @Router       /users/{userId}/followers/count [get]
+// @Summary		Obter contagem de seguidores
+// @Description	Retorna a quantidade total de seguidores de um usuário, DESDE QUE ele seja um vendedor (role='seller')
+// @Tags			Users
+// @Param			userId	path		int					true	"ID do vendedor"
+// @Failure		400		{object}	map[string]string	"ID inválido ou usuário não é vendedor"
+// @Router			/users/{userId}/followers/count [get]
 func (h *UserHandler) GetUsersFollowersCountBySeller(c *gin.Context) {
 	userIdStr := c.Param("userId") // Alinhado com o roteador
 	userId, err := strconv.Atoi(userIdStr)
@@ -290,15 +228,16 @@ func (h *UserHandler) GetUsersFollowersCountBySeller(c *gin.Context) {
 // US 0003: Obter lista de seguidores de um vendedor
 
 // GetFollowersList godoc
-// @Summary      Listar seguidores de um vendedor
-// @Description  Retorna a lista de todos os usuários que seguem um vendedor específico
-// @Tags         users
-// @Accept       json
-// @Produce      json
-// @Param        userId  path      int  true  "ID do vendedor"
-// @Success      200     {object}  domain.UserFollowersListResponse
-// @Failure      404     {object}  map[string]string "Vendedor não encontrado"
-// @Router       /users/{userId}/followers/list [get]
+//
+//	@Summary		Listar seguidores de um vendedor
+//	@Description	Retorna a lista de todos os usuários que seguem um vendedor específico
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			userId	path		int	true	"ID do vendedor"
+//	@Success		200		{object}	domain.UserFollowersListResponse
+//	@Failure		404		{object}	map[string]string	"Vendedor não encontrado"
+//	@Router			/users/{userId}/followers/list [get]
 func (h *UserHandler) GetUsersFollowersList(c *gin.Context) {
 	userIdStr := c.Param("userId")
 	userId, _ := strconv.Atoi(userIdStr)
@@ -336,16 +275,17 @@ func (h *UserHandler) GetUsersFollowersList(c *gin.Context) {
 // US 0004: Obter uma lista de todos os vendedores seguidos por um determinado usuário (Quem estou seguindo?)
 
 // GetFollowersList godoc
-// @Summary      Listar todos os vendedores seguidos
-// @Description  Retorna a lista de todos os vendedores seguidos por um determinado usuário
-// @Tags         users
-// @Accept       json
-// @Produce      json
-// @Param        userId  path      int  true  "ID do vendedor"
-// @Success      200     {object}  domain.UserFollowersListResponse
-// @Failure      404     {object}  map[string]string "Vendedor não encontrado"
-// @Failure      500     {object}  map[string]string "Erro ao buscar vendedores seguidos"
-// @Router       /users/{userId}/followed/list [get]
+//
+//	@Summary		Listar todos os vendedores seguidos
+//	@Description	Retorna a lista de todos os vendedores seguidos por um determinado usuário
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			userId	path		int	true	"ID do vendedor"
+//	@Success		200		{object}	domain.UserFollowersListResponse
+//	@Failure		404		{object}	map[string]string	"Vendedor não encontrado"
+//	@Failure		500		{object}	map[string]string	"Erro ao buscar vendedores seguidos"
+//	@Router			/users/{userId}/followed/list [get]
 func (h *UserHandler) GetUsersFollowedSellersList(c *gin.Context) {
 	userIdStr := c.Param("userId")
 	userId, _ := strconv.Atoi(userIdStr)
@@ -383,15 +323,16 @@ func (h *UserHandler) GetUsersFollowedSellersList(c *gin.Context) {
 // US 0007: Para que você possa "Unfollow" um determinado vendedor.
 
 // UnfollowUser godoc
-// @Summary      Deixar de seguir um vendedor
-// @Description  Permite que um usuário pare de seguir um vendedor específico
-// @Tags         users
-// @Accept       json
-// @Produce      json
-// @Param        userId         path      int  true  "ID do usuário"
-// @Param        userIdToUnfollow  path      int  true  "ID do vendedor a deixar de seguir"
-// @Success      200            {string}  string "Deixou de seguir com sucesso"
-// @Router       /users/{userId}/unfollow/{userIdToUnfollow} [put]
+//
+//	@Summary		Deixar de seguir um vendedor
+//	@Description	Permite que um usuário pare de seguir um vendedor específico
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			userId				path		int		true	"ID do usuário"
+//	@Param			userIdToUnfollow	path		int		true	"ID do vendedor a deixar de seguir"
+//	@Success		200					{string}	string	"Deixou de seguir com sucesso"
+//	@Router			/users/{userId}/unfollow/{userIdToUnfollow} [put]
 func (h *UserHandler) UnfollowUser(c *gin.Context) {
 
 	userIdStr := c.Param("userId")
